layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,12 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+body {
+    width: 100%;
 }
 h3 {
     background: rgb(62, 36, 156);
+    padding: 15px;
 }
